--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -25,7 +25,7 @@
                    android:id="@+id/imgAccount"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_account"
-                   android:layout_alignParentRight="true"/>
+                   android:layout_alignParentEnd="true"/>
 
                <TextView
                    android:id="@+id/tvFullname"
@@ -45,8 +45,6 @@
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/regular"/>
-
-
            </RelativeLayout>
 
             <RelativeLayout
@@ -106,13 +104,41 @@
                 android:background="@drawable/bg_app"
                 android:layout_height="2dp"/>
             <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/view_editUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Thay đổi thông tin"
+                    android:textSize="14sp"
+                    android:layout_alignParentLeft="true"
+                    android:fontFamily="@font/regular"/>
+                <ImageView
+                    android:gravity="end"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_navigate"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/regular"/>
+
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_app"
+                android:layout_height="2dp"/>
+            <RelativeLayout
             android:layout_marginTop="10dp"
+            android:id="@+id/view_editChangePass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Thay đổi thông tin"
+                android:text="Đổi mật khẩu"
                 android:textSize="14sp"
                 android:layout_alignParentLeft="true"
                 android:fontFamily="@font/regular"/>
@@ -211,6 +237,7 @@
                 android:layout_height="2dp"/>
             <RelativeLayout
                 android:layout_marginTop="10dp"
+                android:id="@+id/view_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
