--- a/app/src/main/res/layout/activity_details_notification.xml
+++ b/app/src/main/res/layout/activity_details_notification.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content" tools:targetApi="lollipop">
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_centerVertical="true"
             android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
             android:contentDescription="@string/logo" />
         <RelativeLayout
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/logo"
+            android:layout_toEndOf="@+id/imgBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
