--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_pill"
         android:enabled="true"
-        android:icon="@drawable/ic_pill"
+        android:icon="@drawable/ic_pill2"
         android:title="Thuốc"
         app:showAsAction="ifRoom" />
     <item
